--- a/.github/workflows/lighthouse-test-2.yml
+++ b/.github/workflows/lighthouse-test-2.yml
@@ -37,7 +37,7 @@ jobs:
         env:
           CHROME_PATH: '${{ steps.install-chrome.outputs.chrome-path }}'
         with:
-          urls: "https://www.breadoliveoilsalt.com\nhttps://www.example.com"
+          urls: "https://www.breadoliveoilsalt.com\nhttps://www.example.com\n"
           budgetPath: ./budget.json # test performance budgets
           uploadArtifacts: true # save results as an action artifacts
           temporaryPublicStorage: true # upload lighthouse report to the temporary storage
