--- a/.github/workflows/lighthouse-test.yml
+++ b/.github/workflows/lighthouse-test.yml
@@ -4,7 +4,7 @@ on:
   workflow_dispatch:
     inputs:
       env:
-        description: 'Domain for running Lighthouse tests'
+        description: 'Deploy environment where Lighthouse tests will be run'
         required: true
         type: choice
         options:
@@ -49,5 +49,3 @@ jobs:
           urls: "${{ inputs.urls }}"
           budgetPath: ./budget.json # test performance budgets
           uploadArtifacts: true # save results as an action artifacts
-          # temporaryPublicStorage: true # upload lighthouse report to the temporary storage
-
